RESOLVED FIXED278820
scrollbar-width update doesn't correctly relayout
https://bugs.webkit.org/show_bug.cgi?id=278820
Summary scrollbar-width update doesn't correctly relayout
Luke Warlow
Reported 2024-08-28 15:07:03 PDT
Steps to reproduce: 1. Load https://jsfiddle.net/ubLnz21s/ 2. Click on the "Click Me" button Expected Outcome: The inner element should expand to fill the parent container. Actual outcome: There's a blue gutter where the scrollbar was. Tested in other browsers: Firefox: Expected Chrome: Expected Safari TP: Fail Release 202 (Safari 18.0, WebKit 19620.1.4.8) on macOS 14.5 (23F79) with Scrollbars set to Always show.
Attachments
Luke Warlow
Comment 1 2024-08-28 15:16:35 PDT
Example of a relevant WPT test where this breaks. http://wpt.live/css/css-scrollbars/scrollbar-width-paint-001.html
Radar WebKit Bug Importer
Comment 2 2024-08-28 16:48:45 PDT
Karl Dubost
Comment 3 2024-09-03 22:29:00 PDT
Missing step to reproduce: try to scroll up or down on top or bottom, a blue area will appear. It doesn't appear on Firefox, Chrome. Safari Technology Preview 202 20620.1.4.8 Firefox Nightly 131.0a1 13124.8.29 Google Chrome Canary 130.0.6696.0 6696.0
Nikos Mouchtaris
Comment 4 2024-10-31 14:57:53 PDT
EWS
Comment 5 2024-11-01 17:27:44 PDT
Committed 286042@main (944510f44046): <https://commits.webkit.org/286042@main> Reviewed commits have been landed. Closing PR #36020 and removing active labels.
EWS
Comment 6 2024-11-04 15:31:43 PST
Committed 283286.425@safari-7620-branch (b9e88c049cdf): <https://commits.webkit.org/283286.425@safari-7620-branch> Reviewed commits have been landed. Closing PR #2192 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.