scrollbar-width update doesn't correctly relayout https://bugs.webkit.org/show_bug.cgi?id=278820 rdar://134894732

Reviewed by Simon Fraser.

Prevent RenderBlock::styleDidChange from overwriting the needs layout bit set via
RenderLayerScrollableArea::availableContentSizeChanged by taking into account if the scrollbar width
changed. This progressed some test cases in css-scrollbars/scrollbar-width-paint* but didn't lead to
any new passes. This needs a follow up to fix going from scrollbar-width:none to auto/thin.

* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::scrollbarWidthDidChange):
(WebCore::RenderBlock::borderOrPaddingLogicalWidthChanged):
(WebCore::borderOrPaddingLogicalWidthChanged): Deleted.
* Source/WebCore/rendering/RenderBlock.h:
* Source/WebCore/rendering/RenderBox.h:

Canonical link: https://commits.webkit.org/286042@main